<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="error_connection_title">No Connection</string>
  <string name="error_connection">Please check your connection settings and try again</string>

  <string name="error_connection_timeout_title">Connection Timed Out</string>
  <string name="error_connection_timeout">Please check your connection settings and try again</string>

  <string name="error_unknown_title">Sorry</string>
  <string name="error_unknown">We can not fulfill your request now.\nPlease try again later</string>
  <string name="common_permission_hint">授权提示</string>
  <string name="common_permission_message">使用此功能需要先授予权限</string>
  <string name="common_permission_granted">授予</string>
  <string name="common_permission_denied">取消</string>

  <string name="common_permission_alert">授权提醒</string>
  <string name="common_permission_fail_1">授权失败，请正确授予权限</string>
  <string name="common_permission_fail_2">获取权限失败，请手动授予权限</string>
  <string name="common_permission_fail_3">获取权限失败，请手动授予%s</string>
  <string name="common_permission_fail_4">没有授予后台定位权限，请您选择"始终允许"</string>
  <string name="common_permission_goto">前往授权</string>

  <string name="common_permission_calendar">日历权限</string>
  <string name="common_permission_camera">相机权限</string>
  <string name="common_permission_contacts">通讯录权限</string>
  <string name="common_permission_location">定位权限</string>
  <string name="common_permission_location_background">后台定位权限</string>
  <string name="common_permission_microphone">麦克风权限</string>
  <string name="common_permission_phone">电话权限</string>
  <string name="common_permission_call_log">通话记录权限</string>
  <string name="common_permission_sensors">身体传感器权限</string>
  <string name="common_permission_activity_recognition">健身运动权限</string>
  <string name="common_permission_sms">短信权限</string>
  <string name="common_permission_storage">存储权限</string>

  <string name="common_permission_install">安装应用权限</string>
  <string name="common_permission_notification">通知栏权限</string>
  <string name="common_permission_window">悬浮窗权限</string>
  <string name="common_permission_setting">系统设置权限</string>

  <string name="app_name">VersionCheckLib</string>
  <string name="versionchecklib_confirm">确认</string>
  <string name="versionchecklib_cancel">取消</string>
  <string name="versionchecklib_retry">重试</string>
  <string name="versionchecklib_download_fail_retry">下载失败是否重试？</string>
  <string name="versionchecklib_download_finish">下载完成，点击安装</string>
  <string name="versionchecklib_downloading">正在下载中...</string>
  <string name="versionchecklib_check_new_version">检测到新版本</string>
  <string name="versionchecklib_download_progress">下载进度:%d%%/100%%</string>
  <string name="versionchecklib_download_fail">下载失败，点击重试</string>
  <string name="versionchecklib_progress">%d/100</string>
  <string name="versionchecklib_write_permission_deny">下载安装包需要读写文件权限。</string>
  <string name="versionchecklib_download_apkname">%s.apk</string>
  <string name="versionchecklib_version_service_runing">更新服务正在运行</string>

  <string name="date_cancel">取消</string>
  <string name="date_confirm">确定</string>
  <string name="date_up_to">到</string>
  <string name="date_click_select">点击选择</string>
  <string name="date_year">年</string>
  <string name="date_month">月</string>
  <string name="date_day">日</string>
  <string name="date_hours">小时</string>
  <string name="date_mi">分钟</string>
</resources>
