<!--
  ~ Copyright (c) 2016-present 贵州纳雍穿青人李裕江<1032694760@qq.com>
  ~
  ~ The software is licensed under the Mulan PSL v2.
  ~ You can use this software according to the terms and conditions of the Mulan PSL v2.
  ~ You may obtain a copy of Mulan PSL v2 at:
  ~     http://license.coscl.org.cn/MulanPSL2
  ~ THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR
  ~ PURPOSE.
  ~ See the Mulan PSL v2 for more details.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/base_item_dailog_header" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">


        <TextView
            android:id="@+id/dialog_center_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/base_stroke_c4_5dp"
            android:gravity="center"
            android:hint="@string/date_click_select"
            android:minWidth="100dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:textColor="#FF333333"
            android:textSize="16sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/wheel_picker_date_day_wheel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/date_year"
            android:textColor="@color/color_132"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/wheel_picker_date_day_wheel1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/date_month"
            android:textColor="@color/color_132"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/wheel_picker_date_day_wheel2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/date_day"
            android:textColor="@color/color_132"
            android:textSize="16sp"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>
